<resources>
    <string name="app_name">Photo Food Diary</string>
    <string name="action_settings">Settings</string>
    <string name="breakfast">Breakfast</string>
    <string name="morning_snack">Snack (morning)</string>
    <string name="lunch">Lunch</string>
    <string name="afternoon_snack">Snack (afternoon)</string>
    <string name="dinner">Dinner</string>
    <string name="evening_snack">Snack (evening)</string>
</resources>
